--- a/config/database.yml
+++ b/config/database.yml
@@ -5,8 +5,8 @@ development:
   encoding: unicode
   database: test
   pool: 5
-  username: rez
-  password: rez
+  username: postgres
+  password: rezwan
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
